Fixed schedule screen except for alignment, updated code on adminUserView

--- a/Senior Project/Senior Project/Content/researcherview.css
+++ b/Senior Project/Senior Project/Content/researcherview.css
@@ -1,2 +1,31 @@
-﻿body {
+﻿.schedule-wrapper {
+    width: 800px;
+    height: 600px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-top: 50px;
+    margin: auto;
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    align-content: center;
+}
+
+.researcher-schedule-wrapper {
+    width: 1000px;
+    height: 1000px;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding-top: 50px;
+    margin: auto;
+    display: flex;
+    background-color: white;
+    justify-content: center;
+    align-content: center;
 }
